Add migrations for new authentication tables

--- a/FrontEnd/appsettings.json
+++ b/FrontEnd/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FrontEndIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "FrontEndIdentityDbContextConnection": "Server=localhost;Database=MyCompanyAppDB;user=SA;password=MinTic2021"
   }
 }
